fix sync - use api-football.com for full player data with photos and stats